# gpu-studies

./: .gitignore
cuda/cuda-cnn-operations/: README.md  convolution.cu  convolution_common.h  convolution_test.cuh  data_work.cpp  main.cu  make.sh  max_pooling.cu  max_pooling.cuh  max_pooling_common.h  ops.cu  ops.h  softmax.cu  softmax.cuh  softmax_common.h
cuda/cuda-cnn-operations/inc/: structs.h
cuda/cuda-matrix-multiply/: README.md  check.cpp  info.cpp  info.h  matrixMul.cu  matrixMul_kernel.cu
opengl/: CMakeLists.txt
opengl/common/: objloader.cpp  shader.cpp  tangentspace.cpp
opengl/task_1_triangle/: SimpleVertexShader.vertexshader  main.cpp
opengl/task_2_move/: FigureVertexShader.vertexshader  figure.cpp  move.cpp
opengl/task_3_plane/: PlaneVertexShader.vertexshader  plane.cpp
opengl/task_4_normalmap/: NormalFragmentShader.fragmentshader  NormalVertexShader.vertexshader  move.cpp  move.h  normal.cpp
radeon/radeon-asm-max-pooling/: .gitignore  README.md
radeon/radeon-asm-max-pooling/DebuggerPooling/RadeonPoolingExample/: RadeonPoolingExample.radproj.user.json  fp32_pooling.s
radeon/radeon-asm-max-pooling/RadeonPooling/common/: dispatch.cpp  dispatch.hpp
radeon/radeon-asm-max-pooling/RadeonPooling/common/debugger/: pooling_debug.sh
radeon/radeon-asm-max-pooling/RadeonPooling/common/debugger/include/: gpr_alloc.inc
radeon/radeon-asm-max-pooling/RadeonPooling/gfx9/: CMakeLists.txt  fp32_pooling.cpp  fp32_pooling.s
radeon/radeon-asm-pooling/: README.md
radeon/radeon-asm-pooling/DebuggerPooling/: RadeonPoolingExample.sln
radeon/radeon-asm-pooling/DebuggerPooling/RadeonPoolingExample/: RadeonPoolingExample.radproj  RadeonPoolingExample.radproj.user.json  fp32_pooling_nchw.s
radeon/radeon-asm-pooling/RadeonPooling/common/: dispatch.cpp  dispatch.hpp
radeon/radeon-asm-pooling/RadeonPooling/common/debugger/: dbg_clang_wrapper.sh  pooling_debug.sh
radeon/radeon-asm-pooling/RadeonPooling/debugger/: breakpoint.pl  config.toml  pooling_debug.sh
radeon/radeon-asm-pooling/RadeonPooling/gfx9/: fp32_pooling.cpp  fp32_pooling_nchw.s
vulkan/: CMakeLists.txt  README.md  compile.sh
vulkan/shaders/src/: shader.vert
vulkan/shaders/src/square/: square.frag  square.tesc  square.tese  square.vert
vulkan/src/: main.cpp  square.cpp
vulkan/src/base/: VulkanDevice.cpp  VulkanDevice.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTools.cpp  VulkanTools.h
